--- a/view/administrator/daftarpegawai.html
+++ b/view/administrator/daftarpegawai.html
@@ -1,5 +1,6 @@
 {% extends "../index.html" %}
 
+<!-- ANCHOR: Module CSS daftarpegawai.html -->
 {% block css %}
 <link rel="stylesheet" href="{{ static_url('vendor/bootstrap/dist/css/bootstrap.css') }}">
 <link rel="stylesheet" href="{{ static_url('vendor/font-awesome/css/font-awesome.css') }}">
@@ -20,7 +21,7 @@
 {% end %}
 
 
-<!-- ANCHOR: Module CSS daftarpegawai.html -->
+<!-- ANCHOR: Module JS daftarpegawai.html -->
 {% block js %}
 <script src="{{ static_url('vendor/jquery/dist/jquery.js') }}"></script>
 <script src="{{ static_url('vendor/bootstrap/dist/js/bootstrap.js') }}"></script>
@@ -60,75 +61,74 @@
 </section>
 
 <section class="content">
-<!-- Table Pegawai -->
-<div class="nav-tabs-custom">
-    <!-- Tabs within a box -->
-    <ul class="nav nav-tabs pull-right">
-        <li><a href="#detail" data-toggle="tab">Detail Pegawai</a></li>
-        <li class="active"><a href="#table" data-toggle="tab">Table Pegawai</a></li>
-    </ul>
-    <div class="tab-content no-padding">
-        <div class="chart tab-pane active" id="table">
+    <div class="nav-tabs-custom">
+        <!-- Tabs within a box -->
+        <ul class="nav nav-tabs pull-right">
+            <li><a href="#detail" data-toggle="tab">Detail Pegawai</a></li>
+            <li class="active"><a href="#table" data-toggle="tab">Table Pegawai</a></li>
+        </ul>
+        <div class="tab-content no-padding">
+            <div class="chart tab-pane active" id="table">
 
-            <div class="box box-solid">
-                <!-- formFilter -->
-                <form id="formFilter" class="form-horizontal" method="POST">
-                    {% module xsrf_form_html() %}
-                    <div class="box-body">
-                        <div class="form-group form-group-md">
-                            <label class="control-label col-md-4 col-sm-4 col-xs-12" for="nip">Pegawai ID:</label>
-                            <div class="col-md-4 col-sm-4 col-xs-12">
-                                <input type="text" class="form-control" name="nip" id="nip">
+                <div class="box box-solid">
+                    <!-- formFilter -->
+                    <form id="formFilter" class="form-horizontal" method="POST">
+                        {% module xsrf_form_html() %}
+                        <div class="box-body">
+                            <div class="form-group form-group-md">
+                                <label class="control-label col-md-4 col-sm-4 col-xs-12" for="pegawaiid">NIP/NIK:</label>
+                                <div class="col-md-4 col-sm-4 col-xs-12">
+                                    <input type="text" class="form-control" name="pegawaiid" id="pegawaiid">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="col-md-4 col-sm-4 col-xs-12 col-sm-offset-4">
+                                    <button type="submit" id="cari" class="btn btn-flat btn-primary"><i class="fa fa-binoculars" aria-hidden="true"></i> Cari</button>
+                                    <a class="btn btn-flat btn-success" data-toggle="modal" data-target="#modal-add"><i class="fa fa-user-plus" aria-hidden="true"></i></a>
+                                </div>
                             </div>
                         </div>
-                        <div class="form-group">
-                            <div class="col-md-4 col-sm-4 col-xs-12 col-sm-offset-4">
-                                <button type="submit" id="cari" class="btn btn-flat btn-primary"><i class="fa fa-binoculars" aria-hidden="true"></i> Cari</button>
-                                <a class="btn btn-flat btn-success" data-toggle="modal" data-target="#modal-add"><i class="fa fa-user-plus" aria-hidden="true"></i></a>
-                            </div>
-                        </div>
+                        <!-- /.box-body -->
+                    </form>
+                    <!-- /.formFilter -->
+
+                    <!-- box-footer -->
+                    <div class="box-footer">
+                        <input type="hidden" name="officeid" value="{{ useractived['officeid'] }}">
+                        <input type="hidden" name="rowid">
+                        <!-- Table Pegawai -->
+                        <table id="tablePegawai" class="table table-striped table-bordered dt-responsive nowrap" style="width:100%">
+                            <thead>
+                                <tr>
+                                    <th>ID</th>
+                                    <th></th>
+                                    <th>Pegawai ID</th>
+                                    <th>Username</th>
+                                    <th>Nama</th>
+                                    <th></th>
+                                </tr>
+                            </thead>
+                            <tbody style="cursor: pointer;">
+                            </tbody>
+                        </table>
                     </div>
-                    <!-- /.box-body -->
-                </form>
-                <!-- /.formFilter -->
+                    <!-- /.box-footer -->
 
-                <!-- box-footer -->
-                <div class="box-footer">
-                    <input type="hidden" name="officeid" value="{{ useractived['officeid'] }}">
-                    <input type="hidden" name="rowid">
-                    <table id="tablePegawai" class="table table-striped table-bordered dt-responsive nowrap"
-                        style="width:100%">
-                        <thead>
-                            <tr>
-                                <th>ID</th>
-                                <th></th>
-                                <th>Pegawai ID</th>
-                                <th>Username</th>
-                                <th>Nama</th>
-                                <th></th>
-                            </tr>
-                        </thead>
-                        <tbody style="cursor: pointer;">
-                        </tbody>
-                    </table>
                 </div>
-                <!-- /.box-footer -->
-
             </div>
-        </div>
 
-        <!-- Detail -->
-        <div class="chart tab-pane" id="detail">
-            <div class="error-content">
-                <h3 class="text-center"><i class="fa fa-warning text-yellow"></i> Oops! Page not found.</h3>
+            <!-- Detail -->
+            <div class="chart tab-pane" id="detail">
+                <div class="error-content">
+                    <h3 class="text-center"><i class="fa fa-warning text-yellow"></i> Oops! Page not found.</h3>
 
-                <p class="text-center">
-                    We could not find the page you were looking for.
-                </p>
+                    <p class="text-center">
+                        We could not find the page you were looking for.
+                    </p>
+                </div>
             </div>
         </div>
     </div>
-</div>
 </section>
 
 <!-- modal-add -->
@@ -142,6 +142,8 @@
                     </button>
                 </div>
                 <div class="modal-body">
+
+                    <!-- KKP LOG ALERT -->
                     <div class="alert alert-warning kkplog_alert" style="display: none;">
                     </div>
 
@@ -189,7 +191,7 @@
                         <div class="form-group">
                             <div class="col-md-4 col-sm-4 col-sm-12 col-sm-offset-6">
                                 <button id="batalregisterpegawai" type="button" class="btn btn-default btn-flat" ><i class="fa fa-ban"></i> Batal</button>
-                                <button id="registerpegawai" type="button" class="btn btn-danger btn-flat"><i class="fa fa-save"></i> Pegawai</button>
+                                <button id="registerpegawai" type="button" class="btn btn-success btn-flat"><i class="fa fa-save"></i> Pegawai</button>
                             </div>
                         </div>
                     </div>
