--- a/view/administrator/daftarpegawai.html
+++ b/view/administrator/daftarpegawai.html
@@ -69,7 +69,6 @@
         </ul>
         <div class="tab-content no-padding">
             <div class="chart tab-pane active" id="table">
-
                 <div class="box box-solid">
                     <!-- formFilter -->
                     <form id="formFilter" class="form-horizontal" method="POST">
@@ -94,7 +93,6 @@
 
                     <!-- box-footer -->
                     <div class="box-footer">
-                        <input type="hidden" name="officeid" value="{{ useractived['officeid'] }}">
                         <!-- Table Pegawai -->
                         <table id="tablePegawai" class="table table-striped table-bordered dt-responsive" style="width:100%">
                             <thead>
@@ -109,6 +107,7 @@
                             <tbody style="cursor: pointer;">
                             </tbody>
                         </table>
+                        <!-- ./Table Pegawai -->
                     </div>
                     <!-- /.box-footer -->
 
