--- a/view/administrator/detailpegawai.html
+++ b/view/administrator/detailpegawai.html
@@ -1,28 +1,75 @@
-<div class="container">
-    <div class="row">
-        <div class="col-sm-4">
-            <ul class="timeline">
-                <li>
-                    <i class="fa fa-user bg-blue" aria-hidden="true"></i>
-                    <div class="timeline-item">
-                        <div class="timeline-body">
-                            <input type="hidden" name="userid" value="{{ user['_id'] }}">
-                            <b>PegawaiID:</b> <b class="text-blue">{{ user['pegawaiid'] }} </b><br>
-                            <b>Username:</b> <b class="text-blue">{{ user['username'] }}</b> <br>
-                            <b>Nama:</b> <b class="text-blue">{{ user['nama'] }} </b><br>
-                            <b>Telp:</b> <b class="text-blue">{{ user['phone'] }} </b><br>
-                            <b>Email:</b> <b class="text-blue">{{ user['email'] }} </b><br>
-                            <b>Create:</b> <b class="text-blue">{{ user['createdate'] }} </b><br>
-                            <b>Update:</b> <b class="text-blue">{{ user['updatedate'] }} </b><br>
-                            <br>
-                            <button id="sync_kkp" class="btn btn-info btn-flat"><i class="fa fa-share-alt" aria-hidden="true"></i> kkp.atrbpn.go.id</button>
-                        </div>
+<div class="box box-solid">
+    <div class="box-body">
+        <div id="formPegawai" class="form-horizontal">
+            <div class="form-group form-group-md">
+                <label class="control-label col-md-3 col-sm-3 col-xs-12" for="pegawaiid">NIP/NIK:</label>
+                <div class="col-md-6 col-sm-6 col-xs-12">
+                    <input type="text" class="form-control" name="pegawaiid" id="pegawaiid" value="{{ user['pegawaiid'] }}" readonly>
+                </div>
+            </div>
+            <div class="form-group form-group-md">
+                <label class="control-label col-md-3 col-sm-3 col-xs-12" for="pegawaiid">Nama:</label>
+                <div class="col-md-6 col-sm-6 col-xs-12">
+                    <input type="text" class="form-control" name="name" id="name" value="{{ user['nama'] }}" readonly>
+                </div>
+            </div>
+            <div class="form-group form-group-md">
+                <label class="control-label col-md-3 col-sm-3 col-xs-12" for="pegawaiid">Phone:</label>
+                <div class="col-md-6 col-sm-6 col-xs-12">
+                    <input type="text" class="form-control" name="phone" id="phone" value="{{ user['phone'] }}" readonly>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="box-footer">
+        <form id="formRole" class="form-horizontal">
+            <div class="form-group">
+                <label for="node" class="control-label col-md-3 col-sm-3 col-xs-12"> Role</label>
+                <div class="col-md-6 col-sm-6 col-xs-12">
+                    <select id="role" class="select2 form-control" style="width: 100%;">
+                    </select>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
+                    <div class="pull-right">
+                        <a id="registerrole" class="btn btn-primary btn-flat"><i class="fa fa-save"></i> Simpan</a>
                     </div>
-                </li>
-            </ul>
-        </div>
-        <div class="col-sm-8">
-            
-        </div>
+                </div>
+            </div>
+        </form>
+
+        <!-- TableRole -->
+        <table id="tableRole" class="table table-striped table-bordered dt-responsive" style="width:100%">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Role</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody style="cursor: pointer;">
+            </tbody>
+        </table>
+        <!-- ./TableRole -->
+
+        <script>
+            $("#role").select2({
+                placeholder: "Pilih role..",
+                theme: "bootstrap"
+            });
+
+            /* Initial Table Role */
+            var tableRole = $('#tableRole').DataTable({
+                'responsive': true,
+                'paging': true,
+                'pagingType': 'simple_numbers',
+                'lengthChange': false,
+                'pageLength': 20,
+                'ordering': false,
+                'searching': false,
+                'info': true
+            });
+        </script>
     </div>
 </div>
