--- a/view/page/administrator/daftarpegawai.html
+++ b/view/page/administrator/daftarpegawai.html
@@ -164,33 +164,27 @@
                     <!-- KKP LOG -->
                     <div class="kkplog" style="display: none;">
                         <div class="form-group">
-                            <label class="control-label col-md-3 col-sm-3 col-xs-12" for="pegawaiid_kkplog">Pegawai ID
-                                :</label>
+                            <label class="control-label col-md-3 col-sm-3 col-xs-12" for="pegawaiid_kkplog">Pegawai ID :</label>
                             <div class="col-md-7 col-sm-7 col-xs-12">
-                                <input type="text" class="form-control" name="pegawaiid_kkplog" id="pegawaiid_kkplog"
-                                    value="" readonly>
+                                <input type="text" class="form-control" name="pegawaiid_kkplog" id="pegawaiid_kkplog" value="" readonly>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="control-label col-md-3 col-sm-3 col-xs-12" for="username_kkplog">Username
-                                :</label>
+                            <label class="control-label col-md-3 col-sm-3 col-xs-12" for="username_kkplog">Username :</label>
                             <div class="col-md-7 col-sm-7 col-xs-12">
-                                <input type="text" class="form-control" name="username_kkplog" id="username_kkplog"
-                                    value="" readonly>
+                                <input type="text" class="form-control" name="username_kkplog" id="username_kkplog" value="" readonly>
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="control-label col-md-3 col-sm-3 col-xs-12" for="name_kkplog">Nama :</label>
                             <div class="col-md-7 col-sm-7 col-xs-12">
-                                <input type="text" class="form-control" name="name_kkplog" id="name_kkplog" value=""
-                                    readonly>
+                                <input type="text" class="form-control" name="name_kkplog" id="name_kkplog" value="" readonly>
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="control-label col-md-3 col-sm-3 col-xs-12" for="phone_kkplog">Telp :</label>
                             <div class="col-md-7 col-sm-7 col-xs-12">
-                                <input type="text" class="form-control" name="phone_kkplog" id="phone_kkplog" value=""
-                                    readonly>
+                                <input type="text" class="form-control" name="phone_kkplog" id="phone_kkplog" value="" readonly>
                             </div>
                         </div>
                         <div class="form-group">
