--- a/view/node/detailpegawai.html
+++ b/view/node/detailpegawai.html
@@ -2,7 +2,7 @@
     <div class="box-body">
         <div id="formPegawai" class="form-horizontal">
             <input type="hidden" name="userid" value="{{ user['_id'] }}">
-            
+
             <div class="form-group form-group-md">
                 <label class="control-label col-md-3 col-sm-3 col-xs-12" for="pegawaiid">NIP/NIK:</label>
                 <div class="col-md-6 col-sm-6 col-xs-12">
@@ -10,15 +10,21 @@
                 </div>
             </div>
             <div class="form-group form-group-md">
-                <label class="control-label col-md-3 col-sm-3 col-xs-12" for="pegawaiid">Nama:</label>
+                <label class="control-label col-md-3 col-sm-3 col-xs-12" for="name">Nama:</label>
                 <div class="col-md-6 col-sm-6 col-xs-12">
                     <input type="text" class="form-control" name="name" id="name" value="{{ user['nama'] }}" readonly>
                 </div>
             </div>
             <div class="form-group form-group-md">
-                <label class="control-label col-md-3 col-sm-3 col-xs-12" for="pegawaiid">Phone:</label>
+                <label class="control-label col-md-3 col-sm-3 col-xs-12" for="phone">Phone:</label>
                 <div class="col-md-6 col-sm-6 col-xs-12">
                     <input type="text" class="form-control" name="phone" id="phone" value="{{ user['phone'] }}" readonly>
+                </div>
+            </div>
+            <div class="form-group form-group-md">
+                <label class="control-label col-md-3 col-sm-3 col-xs-12" for="email">Email:</label>
+                <div class="col-md-6 col-sm-6 col-xs-12">
+                    <input type="text" class="form-control" name="email" id="email" value="{{ user['email'] }}" readonly>
                 </div>
             </div>
         </div>
@@ -48,10 +54,9 @@
         <table id="tableRole" class="table table-striped table-bordered dt-responsive" style="width:100%">
             <thead>
                 <tr>
-                    <th>ID</th>
                     <th>No</th>
+                    <th>Key</th>
                     <th>Role</th>
-                    <th></th>
                 </tr>
             </thead>
             <tbody style="cursor: pointer;">
@@ -64,22 +69,27 @@
                 placeholder: "Pilih role..",
                 theme: "bootstrap"
             });
-
-
+            
+            /* Initial Add Role */
             $('#formAddRole').validate({
-                rules: {},
-                messages: {},
-                errorElement: "small",
-                highlight: function (element, errorClass, validClass) {
-                    var elem = $(element);
-                    elem.closest('.form-group').addClass('has-error');
-                },
-                unhighlight: function (element, errorClass, validClass) {
-                    var elem = $(element);
-                    elem.closest('.form-group').removeClass('has-error');
-                },
                 submitHandler: function (form) {
-                    $('#tableRole').DataTable().ajax.reload();
+                    $.ajax({
+                        type: 'POST',
+                        url: '/administrator/daftarpegawai/detail/role',
+                        data: JSON.stringify({
+                            userid: $('input[name=userid]').val(),
+                            key: $('#role').val()
+                        }),
+                        headers: { 'X-XSRFToken': $('input[name="_xsrf"]').val() },
+                        success: (function (data) {
+                            if (data.status){
+                                $('#tableRole').DataTable().ajax.reload();
+                            }
+                        }),
+                        error: (function (XMLHttpRequest, textStatus, errorThrown) {
+                            alert("Error: " + errorThrown);
+                        })
+                    });
                 }
             });
 
@@ -107,23 +117,21 @@
                 'columns': [
                     {
                         "targets": [0],
-                        "visible": false,
-                        "data": '_id',
+                        "width": "5%",
+                        "render": function (data, type, row, meta) {
+                            return meta.row + meta.settings._iDisplayStart + 1;
+                        }
                     },
                     {
                         "targets": [1],
-                        "width": "5%",
+                        "width": "20%",
+                        "data": 'key',
                         "className": "dt-center"
                     },
                     {
                         "targets": [2],
-                        "width": "92%",
+                        "width": "70%",
                         "data": 'description',
-                        "className": "dt-center"
-                    },
-                    {
-                        "targets": [3],
-                        "width": "3%",
                         "className": "dt-center"
                     }
                 ],
