--- a/view/page/administrator/daftarpegawai.html
+++ b/view/page/administrator/daftarpegawai.html
@@ -75,10 +75,9 @@
                         {% module xsrf_form_html() %}
                         <div class="box-body">
                             <div class="form-group form-group-md">
-                                <label class="control-label col-md-4 col-sm-4 col-xs-12"
-                                    for="pegawaiid">NIP/NIK:</label>
+                                <label class="control-label col-md-4 col-sm-4 col-xs-12" for="pegawaiid_find">NIP/NIK:</label>
                                 <div class="col-md-4 col-sm-4 col-xs-12">
-                                    <input type="text" class="form-control" name="pegawaiid" id="pegawaiid">
+                                    <input type="text" class="form-control" name="pegawaiid_find" id="pegawaiid_find">
                                 </div>
                             </div>
                             <div class="form-group">
@@ -160,6 +159,7 @@
                             </div>
                         </div>
                     </div>
+                    <!-- ./KKP LOG FINDER -->
 
                     <!-- KKP LOG -->
                     <div class="kkplog" style="display: none;">
@@ -194,6 +194,7 @@
                             </div>
                         </div>
                     </div>
+                    <!-- ./KKP LOG -->
                 </div>
             </div>
         </div>
