--- a/view/node/detailpegawai.html
+++ b/view/node/detailpegawai.html
@@ -36,6 +36,7 @@
             </div>
         </form>
 
+        
         <!-- TableRole -->
         <table id="tableRole" class="table table-striped table-bordered dt-responsive" style="width:100%">
             <thead>
@@ -141,7 +142,7 @@
                 ],
                 'responsive': true,
                 'paging': false,
-                'autoWidth': false,
+                'autoWidth': true,
                 'pagingType': 'simple_numbers',
                 'lengthChange': false,
                 'ordering': false,
