--- a/view/node/detailrole.html
+++ b/view/node/detailrole.html
@@ -1,25 +1,30 @@
 <div class="box box-solid">
+    <div class="box-header">
+
+    </div>
     <div class="box-body">
         <div id="formPegawai" class="form-horizontal">
             <input type="hidden" name="userid" value="{{ user['_id'] }}">
 
             <div class="form-group form-group-md">
                 <label class="control-label col-md-3 col-sm-3 col-xs-12" for="pegawaiid">PegawaiID:</label>
-                <div class="col-md-6 col-sm-6 col-xs-12">
+                <div class="col-md-8 col-sm-8 col-xs-12">
                     <input type="text" class="form-control" name="pegawaiid" id="pegawaiid" value="{{ user['pegawaiid'] }}" readonly>
                 </div>
             </div>
             <div class="form-group form-group-md">
                 <label class="control-label col-md-3 col-sm-3 col-xs-12" for="name">Nama:</label>
-                <div class="col-md-6 col-sm-6 col-xs-12">
+                <div class="col-md-8 col-sm-8 col-xs-12">
                     <input type="text" class="form-control" name="name" id="name" value="{{ user['nama'] }}" readonly>
                 </div>
             </div>
         </div>
+    </div>
+    <div class="box-footer">
         <form id="formAddRole" class="form-horizontal">
             <div class="form-group">
                 <label for="node" class="control-label col-md-3 col-sm-3 col-xs-12"> Role:</label>
-                <div class="col-md-6 col-sm-6 col-xs-12">
+                <div class="col-md-8 col-sm-8 col-xs-12">
                     <select id="role" class="select2 form-control" style="width: 100%;">
                         {% for item in typeregister %}
                         <option value="{{ item['code'] }}">{{ item['description'] }}</option>
@@ -28,14 +33,13 @@
                 </div>
             </div>
             <div class="form-group">
-                <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
+                <div class="col-md-8 col-sm-8 col-xs-12 col-md-offset-3">
                     <div class="pull-right">
-                        <button type="submit" id="registerrole" name="registerrole" class="btn btn-primary btn-flat"><i class="fa fa-save"></i> Simpan</button>
+                        <button type="submit" id="btnAddRole" name="btnAddRole" class="btn btn-primary btn-flat"> Tambah</button>
                     </div>
                 </div>
             </div>
         </form>
-
         
         <!-- TableRole -->
         <table id="tableRole" class="table table-striped table-bordered dt-responsive" style="width:100%">
@@ -52,8 +56,7 @@
             </tbody>
         </table>
         <!-- ./TableRole -->
-    </div>
-    <div class="box-footer">
+
         <script>
             $("#role").select2({
                 placeholder: "Pilih role..",
@@ -73,6 +76,34 @@
                         headers: { 'X-XSRFToken': $('input[name="_xsrf"]').val() },
                         success: (function (data) {
                             if (data.status){
+                                $('#tableRole').DataTable().ajax.reload();
+                            }
+                        }),
+                        error: (function (XMLHttpRequest, textStatus, errorThrown) {
+                            alert("Error: " + errorThrown);
+                        })
+                    });
+                }
+            });
+
+            // Role Pegawai
+            $('#tableRole tbody').on('click', '#btnDeleteRole', function () {
+                var selected_row = $(this).parents('tr');
+                if (selected_row.hasClass('child')) {
+                    selected_row = selected_row.prev();
+                }
+
+                if (tableRole.row(selected_row).data()[0] != "") {
+                    $.ajax({
+                        type: 'DELETE',
+                        url: '/administrator/daftarpegawai/role',
+                        data: JSON.stringify({
+                            userid: $('input[name=userid]').val(),
+                            key: tableRole.row(selected_row).data()['key']
+                        }),
+                        headers: { 'X-XSRFToken': $('input[name="_xsrf"]').val() },
+                        success: (function (data) {
+                            if (data.status) {
                                 $('#tableRole').DataTable().ajax.reload();
                             }
                         }),
