--- a/view/page/administrator/daftarpegawai.html
+++ b/view/page/administrator/daftarpegawai.html
@@ -61,77 +61,55 @@
 </section>
 
 <section class="content">
-    <div class="nav-tabs-custom">
-        <!-- Tabs within a box -->
-        <ul class="nav nav-tabs pull-right">
-            <li><a href="#detail" data-toggle="tab">Detail Pegawai</a></li>
-            <li class="active"><a href="#table" data-toggle="tab">Table Pegawai</a></li>
-        </ul>
-        <div class="tab-content no-padding">
-            
-            <div class="chart tab-pane active" id="table">
-                <div class="box box-solid">
-                    <!-- formFilter -->
-                    <form id="formFilter" class="form-horizontal" method="POST">
-                        {% module xsrf_form_html() %}
-                        <div class="box-body">
+    <div class="box box-solid">
 
-                            <div class="form-group">
-                                <label class="control-label col-md-4 col-sm-4 col-xs-12" for="inputPegawaiid">PegawaiID:</label>
-                                <div class="col-md-4 col-sm-4 col-xs-12">
-                                    <div class="input-group input-group-md">
-                                        <input type="text" class="form-control" id="inputPegawaiid" name="inputPegawaiid">
-                                        <span class="input-group-btn">
-                                            <button id="btnFilterPegawaiid" type="submit" class="btn btn-warning btn-flat"> <i class="fa fa-filter" aria-hidden="true"></i> </button>
-                                        </span>
-                                    </div>
-                                </div>
-                            </div>
+        <!-- formFilter -->
+        <form id="formFilter" class="form-horizontal" method="POST">
+            {% module xsrf_form_html() %}
+            <div class="box-body">
 
-
+                <div class="form-group">
+                    <label class="control-label col-md-4 col-sm-4 col-xs-12" for="inputPegawaiid">PegawaiID:</label>
+                    <div class="col-md-4 col-sm-4 col-xs-12">
+                        <div class="input-group input-group-md">
+                            <input type="text" class="form-control" id="inputPegawaiid" name="inputPegawaiid">
+                            <span class="input-group-btn">
+                                <button id="btnFilterPegawaiid" type="submit" class="btn btn-warning btn-flat"> <i
+                                        class="fa fa-filter" aria-hidden="true"></i> </button>
+                            </span>
                         </div>
-                        <!-- /.box-body -->
-                    </form>
-                    <!-- /.formFilter -->
-
-                    <!-- box-footer -->
-                    <div class="box-footer">
-                        <a class="btn btn-flat btn-info" id="btnRefresh"><i class="fa fa-refresh" aria-hidden="true"></i></a>
-                        <a class="btn btn-flat btn-success" data-toggle="modal" data-target="#modal-activation"><i class="fa fa-user-plus" aria-hidden="true"></i></a>
-
-                        <!-- Table Pegawai -->
-                        <table id="tablePegawai" class="table table-striped table-bordered responsive" style="width:100%">
-                            <thead>
-                                <tr>
-                                    <th>ID</th>
-                                    <th>No</th>
-                                    <th>Pegawai ID</th>
-                                    <th>Nama</th>
-                                    <th>Create Date</th>
-                                    <th></th>
-                                    <th></th>
-                                </tr>
-                            </thead>
-                            <tbody style="cursor: pointer;">
-                            </tbody>
-                        </table>
-                        <!-- ./Table Pegawai -->
                     </div>
-                    <!-- /.box-footer -->
-
                 </div>
-            </div>
 
-            <!-- Detail -->
-            <div class="chart tab-pane" id="detail">
-                <div class="error-content">
-                    <h3 class="text-center"><i class="fa fa-warning text-yellow"></i> Oops! Page not found.</h3>
 
-                    <p class="text-center">
-                        We could not find the page you were looking for.
-                    </p>
-                </div>
             </div>
+            <!-- /.box-body -->
+        </form>
+        <!-- /.formFilter -->
+
+    </div>
+
+    <div class="box box-solid">
+        <div class="box-body">
+            <a class="btn btn-flat btn-success" data-toggle="modal" data-target="#modal-activation"><i class="fa fa-user-plus" aria-hidden="true"></i></a>
+            
+            <!-- Table Pegawai -->
+            <table id="tablePegawai" class="table table-striped table-bordered responsive" style="width:100%">
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>No</th>
+                        <th>Pegawai ID</th>
+                        <th>Nama</th>
+                        <th>Create Date</th>
+                        <th></th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody style="cursor: pointer;">
+                </tbody>
+            </table>
+            <!-- ./Table Pegawai -->
         </div>
     </div>
 </section>
@@ -164,6 +142,21 @@
                 </form>
             </div>
             <div class="modal-footer" id="userView">
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" data-remote="false" id="modal-role" data-backdrop="false" id="activedModal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">×</span>
+                </button>
+            </div>
+            <div class="modal-body" id="userRole">
+
             </div>
         </div>
     </div>
