--- a/view/page/register/sent.html
+++ b/view/page/register/sent.html
@@ -163,11 +163,10 @@
                                     <th>No</th>
                                     <th>Nomor Berkas</th>
                                     <th>Tahun Berkas</th>
-                                    <th>Tanggal Kirim</th>
                                     <th>Pengirim</th>
-                                    <th>Kegiatan</th>
-                                    <th>Prosedur</th>
-                                    <th></th>
+                                    <th>Tanggal Kirim</th>
+                                    <th>Penerima</th>
+                                    <th>Tanggal Terima</th>
                                 </tr>
                             </thead>
                             <tbody style="cursor: pointer;">
